--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -2,4 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@font-face {
+  font-family: LINESeedSansTH;
+  src: url(/src/fonts/LINESeedSansTH_Rg.woff);
+}
