--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -6,3 +6,16 @@
   font-family: LINESeedSansTH;
   src: url(/src/fonts/LINESeedSansTH_Rg.woff);
 }
+
+/* Loader styles */
+.loader {
+  border: 4px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 4px solid #3498db;
+  width: 30px;
+  height: 30px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin
